# TechBharat-MultiAgentAnalysisSystem

./: .gitignore  README.md  main.py  pyproject.toml
cleanup_and_analysis/: .env  README.md  pyproject.toml  report_Haritha Haram.md
cleanup_and_analysis/input/: Haritha Haram.csv  Haritha Haram_transformed.csv
cleanup_and_analysis/src/cleanup_and_analysis/: crew.py  main.py
cleanup_and_analysis/src/cleanup_and_analysis/config/: agents.yaml  tasks.yaml
cleanup_and_analysis/src/cleanup_and_analysis/tools/: __init__.py  cleaning_tools.py  documentation_tools.py  ingestion_tools.py  insight_tools.py  output_tools.py  plotting_tools.py  standardization_tools.py  transformation_tools.py
