[project]
name = "rtgs"
version = "0.1.0"
description = "Data Processing and Analysis Crew with Multiple Specialized Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.177.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]
