[project]
name = "cleanup_and_analysis"
version = "0.1.0"
description = "cleanup_and_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
cleanup_and_analysis = "cleanup_and_analysis.main:run"
run_crew = "cleanup_and_analysis.main:run"
train = "cleanup_and_analysis.main:train"
replay = "cleanup_and_analysis.main:replay"
test = "cleanup_and_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
